--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "server side",
   "main": "app.js",
-  
   "scripts": {
-    "start":"node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ibm",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "socket.io": "^4.5.4"
   }
